# workspace-cli

./: 404.html  CHANGELOG.md  README.md  index.html  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: docs.yml  main.yml
basic-usage/: index.html
configuration/: index.html
docs/: mkdocs.yml
docs/docs/: basic-usage.md  configuration.md  faq.md  index.md  installation.md  plugins.md  templates.md
docs/docs/css/: overrides.css
docs/extensions/: gfm_admonitions.py  termynal.py
faq/: index.html
installation/: index.html
plugins/: index.html
search/: search_index.json
tasks/: __init__.py  docs.py  helpers.py  release.py
templates/: index.html
test-project-root/: .gitignore
test-project-root/plugins/: test_plugins.py
test-project-root/templates/bad-template/: cookiecutter.json
test-workspace-root/plugins/: test_plugins.py
test-workspace-root/templates/bad-template/{{ cookiecutter.project_slug }}/: README.md
test-workspace-root/templates/valid-pipenv-template/: cookiecutter.json
test-workspace-root/templates/valid-pipenv-template/{{ cookiecutter.project_slug }}/: context.json
tests/: .gitignore  test_version.py  utils.py
tests/cli/: test_exceptions.py  test_theme.py
tests/cli/commands/: conftest.py  constants.py  helpers.py  test_add.py  test_dependees.py  test_dependencies.py  test_info.py  test_init.py  test_list.py  test_new.py  test_pipenv.py  test_plugin.py  test_remove.py  test_reverse.py  test_run.py  test_sync.py  test_template.py
tests/core/: test_models.py
workspace/: __main__.py
workspace/cli/: __init__.py  exceptions.py  runner.py  theme.py  utils.py
workspace/cli/commands/: add.py  dependees.py  dependencies.py  info.py  init.py  list.py  new.py  plugin.py  remove.py  reverse.py  run.py  sync.py
workspace/cli/commands/template/: __init__.py  list.py  path.py
workspace/core/: exceptions.py  models.py  settings.py  templates.py
workspace/core/adapter/: __init__.py  base.py  pipenv.py  poetry.py
workspace/templates/poetry/: cookiecutter.json
workspace/templates/poetry/{{ cookiecutter.project_slug }}/: pyproject.toml
workspaces/: __main__.py
workspaces/cli/: __init__.py  callbacks.py  exceptions.py  theme.py  utils.py
workspaces/cli/commands/: add.py  dependees.py  info.py  init.py  list.py  new.py  plugin.py  remove.py  reverse.py  run.py  sync.py
workspaces/core/: exceptions.py  models.py  settings.py  templates.py
workspaces/core/adapter/: __init__.py  base.py  pipenv.py  poetry.py
(+4 files in other folders)
