[tool.poetry]
name = "workspace-cli"
version = "0.3.1"
description = "Manage interdependent projects in a workspace."
authors = ["Jack Smith"]
packages = [
    {include = "workspace"},
]
homepage = "https://github.com/jacksmith15/workspace-cli"
repository = "https://github.com/jacksmith15/workspace-cli"
readme = "README.md"

[tool.poetry.scripts]
workspace = "workspace.__main__:run_cli"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0"
jsonschema = "^4.0.1"
pipenv = {version = "^2021.5.29", optional = true}
poetry = {version= "^1.1.11", optional=true}
cookiecutter = {version = "^1.7.3", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
toml = "^0.10"
ipdb = "^0.13.7"
ipython = "^7.22.0"
mypy = "^0.910"
pyflakes = "^2.3.1"
invoke = "^1.5.0"
termcolor = "^1.1.0"
pytest-cov = "^2.11.1"
changelog-cmd = "^0.2.0"
types-termcolor = "*"
types-toml = "*"
mkdocs-material = "^7.3.4"

[tool.poetry.extras]
pipenv = ["pipenv"]
poetry = ["poetry"]
cookiecutter = ["cookiecutter"]

[tool.mypy]
show_column_numbers = true
show_error_codes = true
color_output = true
warn_unused_configs = true
warn_unused_ignores = true
follow_imports = "normal"
exclude = "\\{.*"

[[tool.mypy.overrides]]
module = [
    # Project code dependencies
    "pipenv.*",
    "jsonschema.*",
    "pipfile.*",
    "poetry.*",
    "cookiecutter.*",

    # Test dependencies
    "invoke.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_functions = ["should_*", "test_*"]

[tool.isort]
# Setting compatible with black. See https://black.readthedocs.io/en/stable/compatible_configs.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
